# plant_pot

./: README.md
src/plant/: package.xml  setup.cfg  setup.py
src/plant/config/: controllers.yaml
src/plant/launch/: spawn_turntable.launch.py
src/plant/plant/: capture_images.py
src/plant/rviz/: 2.rviz
src/plant/urdf/: turntable_with_plant.urdf  turntable_with_plant.urdf.xacro
