<?xml version="1.0"?>
<package format="3">
  <name>plant</name>
  <version>0.0.1</version>
  <description>Turntable + cameras + Gazebo + RViz (URDF + launch)</description>
  <maintainer email="wd@example.com">wd</maintainer>
  <license>Apache-2.0</license>

  <!-- 构建工具 -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- 运行/构建依赖-->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend> 
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>velocity_controllers</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <!--  ros2_control 框架 -->
  <exec_depend>ros2_control</exec_depend> 

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
